--- a/CSS/index.css
+++ b/CSS/index.css
@@ -16,8 +16,6 @@ body {
 .logo {
   font-size: xx-large;
 }
-
-
 .right-contents {
   display: flex;
   justify-content: center;
@@ -210,9 +208,17 @@ body {
   transform: translateX(-100%);
 }
 
-#second-row {
+#main-second-row {
   display: flex;
   gap: 20px;
+}
+
+@media screen and (max-width:578px) {
+    #main-second-row {
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+    }
 }
 
 
