radios in cart page is fixed now

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -19,6 +19,16 @@
     color: white;
 }
 
+.form-control {
+    border: 1px solid black;
+}
+
+.form-control:focus {
+    box-shadow: none;
+    outline: none;
+    border: none;
+}
+
 .name {
     display: flex;
     align-items: center;
